# tauri-apple-intelligence

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs
ailib/: apple-ai.swift
prebuilt/: AppleOnDeviceAI.swiftdoc  AppleOnDeviceAI.swiftmodule  AppleOnDeviceAI.swiftsourceinfo  libappleai.dylib
scripts/: build.sh
src/: lib.rs
tests/: mock_app_stream.rs
