[package]
name = "tauri-apple-intelligence"
version = "0.2.1"
description = "Tauri commands and native bridge for Apple Intelligence"
license = "MIT"
readme = "README.md"
repository = "https://github.com/entro314-labs/tauri-apple-intelligence"
homepage = "https://github.com/entro314-labs/tauri-apple-intelligence#readme"
edition = "2024"
rust-version = "1.85"
keywords = ["tauri", "apple-intelligence", "foundation-models", "on-device", "ai"]
include = [
	"src/**",
	"prebuilt/**",
	"ailib/**",
	"scripts/**",
	"Cargo.toml",
	"README.md",
	"LICENSE",
]

[lib]
name = "tauri_apple_intelligence"
crate-type = ["rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2" }
specta = { version = "2.0.0-rc.22", features = ["derive", "serde_json"] }
uuid = { version = "1", features = ["v4", "serde"] }
